k8s/emqx/deploy-go-mqtt-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-mqtt-bridge
  namespace: emqx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-mqtt-bridge
  template:
    metadata:
      labels:
        app: go-mqtt-bridge
    spec:
      containers:
      - name: bridge
        image: go-mqtt-bridge:v1
        resources:
          limits:
            cpu: 500m
            memory: 256Mi
          requests:
            cpu: 100m
            memory: 64Mi
