k8s/emqx/emqx-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1","kind":"StatefulSet","metadata":{"annotations":{},"name":"emqx","namespace":"emqx"},"spec":{"podManagementPolicy":"Parallel","replicas":3,"selector":{"matchLabels":{"app":"emqx"}},"serviceName":"emqx-headless","template":{"metadata":{"labels":{"app":"emqx"}},"spec":{"containers":[{"env":[{"name":"POD_NAME","valueFrom":{"fieldRef":{"fieldPath":"metadata.name"}}},{"name":"EMQX_NODE__NAME","value":"$(POD_NAME)@$(POD_NAME).emqx-headless.emqx.svc.cluster.local"},{"name": [...]
  creationTimestamp: "2026-03-05T17:12:13Z"
  generation: 3
  name: emqx
  namespace: emqx
  resourceVersion: "3396296"
  uid: 675a7e09-0068-4a98-a249-760e200f4392
spec:
  persistentVolumeClaimRetentionPolicy:
    whenDeleted: Retain
    whenScaled: Retain
  podManagementPolicy: Parallel
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: emqx
  serviceName: emqx-headless
  template:
    metadata:
      annotations:
        kubectl.kubernetes.io/restartedAt: "2026-03-12T20:45:38Z"
      creationTimestamp: null
      labels:
        app: emqx
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/control-plane
                operator: DoesNotExist
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - emqx
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - env:
        - name: POD_NAME
          valueFrom:
            fieldRef:
              apiVersion: v1
              fieldPath: metadata.name
        - name: EMQX_NODE__NAME
          value: $(POD_NAME)@$(POD_NAME).emqx-headless.emqx.svc.cluster.local
        - name: EMQX_CLUSTER__DISCOVERY_STRATEGY
          value: static
        - name: EMQX_CLUSTER__STATIC__SEEDS
          value: '[emqx-0@emqx-0.emqx-headless.emqx.svc.cluster.local,emqx-1@emqx-1.emqx-headless.emqx.svc.cluster.local,emqx-2@emqx-2.emqx-headless.emqx.svc.cluster.local]'
        - name: EMQX_DASHBOARD__DEFAULT_USERNAME
          value: admin
        - name: EMQX_DASHBOARD__DEFAULT_PASSWORD
          value: AioT2026Admin
        - name: EMQX_NODE__COOKIE
          value: emqx-aiot-secret-cookie-2026
        image: emqx/emqx:5.5.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 18083
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 15
          successThreshold: 1
          timeoutSeconds: 1
        name: emqx
        ports:
        - containerPort: 1883
          name: mqtt
          protocol: TCP
        - containerPort: 8883
          name: mqtt-ssl
          protocol: TCP
        - containerPort: 8083
          name: ws
          protocol: TCP
        - containerPort: 8084
          name: wss
          protocol: TCP
        - containerPort: 18083
          name: dashboard
          protocol: TCP
        - containerPort: 4370
          name: ekka
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /status
            port: 18083
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources:
          limits:
            cpu: "1"
            memory: 1Gi
          requests:
            cpu: 200m
            memory: 512Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  updateStrategy:
    rollingUpdate:
      partition: 0
    type: RollingUpdate
status:
  availableReplicas: 3
  collisionCount: 0
  currentReplicas: 3
  currentRevision: emqx-7b45ff76f
  observedGeneration: 3
  readyReplicas: 3
  replicas: 3
  updateRevision: emqx-7b45ff76f
  updatedReplicas: 3
