k8s/emqx/services.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"emqx","namespace":"emqx"},"spec":{"ports":[{"name":"mqtt","port":1883,"targetPort":1883},{"name":"mqtt-ssl","port":8883,"targetPort":8883},{"name":"ws","port":8083,"targetPort":8083},{"name":"wss","port":8084,"targetPort":8084},{"name":"dashboard","port":18083,"targetPort":18083}],"selector":{"app":"emqx"},"type":"ClusterIP"}}
    name: emqx
    namespace: emqx
  spec:
    - 10.101.116.107
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
    - name: mqtt-ssl
      port: 8883
      protocol: TCP
      targetPort: 8883
    - name: ws
      port: 8083
      protocol: TCP
      targetPort: 8083
    - name: wss
      port: 8084
      protocol: TCP
      targetPort: 8084
    - name: dashboard
      port: 18083
      protocol: TCP
      targetPort: 18083
    selector:
      app: emqx
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"emqx-dashboard","namespace":"emqx"},"spec":{"ports":[{"name":"dashboard","port":18083,"targetPort":18083}],"selector":{"app":"emqx"},"sessionAffinity":"ClientIP","sessionAffinityConfig":{"clientIP":{"timeoutSeconds":3600}},"type":"ClusterIP"}}
    name: emqx-dashboard
    namespace: emqx
  spec:
    - 10.105.30.186
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: dashboard
      port: 18083
      protocol: TCP
      targetPort: 18083
    selector:
      app: emqx
    sessionAffinity: ClientIP
    sessionAffinityConfig:
      clientIP:
        timeoutSeconds: 3600
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"emqx-headless","namespace":"emqx"},"spec":{"clusterIP":"None","ports":[{"name":"ekka","port":4370,"targetPort":4370},{"name":"mqtt","port":1883,"targetPort":1883},{"name":"dashboard","port":18083,"targetPort":18083}],"selector":{"app":"emqx"}}}
    name: emqx-headless
    namespace: emqx
  spec:
    - None
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: ekka
      port: 4370
      protocol: TCP
      targetPort: 4370
    - name: mqtt
      port: 1883
      protocol: TCP
      targetPort: 1883
    - name: dashboard
      port: 18083
      protocol: TCP
      targetPort: 18083
    selector:
      app: emqx
    sessionAffinity: None
    type: ClusterIP
  status:
    loadBalancer: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      kubectl.kubernetes.io/last-applied-configuration: |
        {"apiVersion":"v1","kind":"Service","metadata":{"annotations":{},"name":"emqx-mqtt-external","namespace":"emqx"},"spec":{"ports":[{"name":"mqtt","nodePort":31883,"port":1883,"targetPort":1883},{"name":"ws","nodePort":31083,"port":8083,"targetPort":8083}],"selector":{"app":"emqx"},"type":"NodePort"}}
    name: emqx-mqtt-external
    namespace: emqx
  spec:
    - 10.107.91.235
    externalTrafficPolicy: Cluster
    internalTrafficPolicy: Cluster
    ipFamilies:
    - IPv4
    ipFamilyPolicy: SingleStack
    ports:
    - name: mqtt
      nodePort: 31883
      port: 1883
      protocol: TCP
      targetPort: 1883
    - name: ws
      nodePort: 31083
      port: 8083
      protocol: TCP
      targetPort: 8083
    selector:
      app: emqx
    sessionAffinity: None
    type: NodePort
  status:
    loadBalancer: {}
kind: List
metadata:
